# verstappenbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
migrations/: 20240424163956_initial_migration.down.sql  20240424163956_initial_migration.up.sql
src/: audio_play.rs  database.rs  discord.rs  lib.rs  main.rs  speech_to_text.rs
src/discord/: README.md  audio_play.rs  commands.rs  events.rs  mod.rs
src/discord_bot/: audio_play.rs  commands.rs  events.rs  mod.rs
