[package]
name = "verstappenbot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dashmap = "5.5.3"
dotenv = "0.15.0"
serenity = { version = "0.12", features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
    "rustls_backend",
] }
songbird = { version = "0.4.0", features = ["serenity", "receive"] }
symphonia = { features = ["mp3", "ogg"], version = "0.5.2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
vosk = "0.2.0"
